remove double brace initialization (this is antipattern)